--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css?family=muli" rel="stylesheet">
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/main.css">
-    <link rel="shortcut icon" type="image/png" href="omp_logo2.png"/>
+    <link rel="shortcut icon" type="image/png" href="assets/images/omp_logo_shortcrop_white.png"/>
    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
@@ -17,25 +17,25 @@
 <section class="hero">
   <div class="hero_img"></div>
   <div class="slogan_background">
-    <img class="mast_head" src="OMPLogowhite_short.png" />
+    <img class="mast_head" src="assets/images/omp_logo_shortcrop_white.png" />
     <h1>Owl Mountain Products</h1>
     <div class="card">
-      <img src="everest_offerings-1.png" class="icon" alt="Tech Stack Icon">
+      <img src="assets/images/everest_offerings-1.png" class="icon" alt="Tech Stack Icon">
       <h3 class="sevice_description_title">Product Development</h3>
       <p class="sevice_description">There are different tech 'languages' and frameworks for a reason, and each has their own strengths and weaknesses. If needed, we'll advise to make sure you're using the best stack for your goals.</p>      
     </div>
     <div class="card">
-      <img src="everest_offerings-1.png" class="icon" alt="Tech Stack Icon">
+      <img src="assets/images/everest_offerings-1.png" class="icon" alt="Tech Stack Icon">
       <h3 class="sevice_description_title">Content</h3>
       <p class="sevice_description">There are different tech 'languages' and frameworks for a reason, and each has their own strengths and weaknesses. If needed, we'll advise to make sure you're using the best stack for your goals.</p>      
     </div> 
     <div class="card">
-      <img src="everest_offerings-1.png" class="icon" alt="Tech Stack Icon">
+      <img src="assets/images/everest_offerings-1.png" class="icon" alt="Tech Stack Icon">
       <h3 class="sevice_description_title">Design</h3>
       <p class="sevice_description">There are different tech 'languages' and frameworks for a reason, and each has their own strengths and weaknesses. If needed, we'll advise to make sure you're using the best stack for your goals.</p>      
     </div>
     <div class="card">
-      <img src="everest_offerings-1.png" class="icon" alt="Tech Stack Icon">
+      <img src="assets/images/everest_offerings-1.png" class="icon" alt="Tech Stack Icon">
       <h3 class="sevice_description_title">Data Science</h3>
       <p class="sevice_description">There are different tech 'languages' and frameworks for a reason, and each has their own strengths and weaknesses. If needed, we'll advise to make sure you're using the best stack for your goals.</p>      
     </div>   
