--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <link href="https://fonts.googleapis.com/css?family=Playfair+Display|Playfair+Display+SC" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=cabin" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=muli" rel="stylesheet">
-    <link rel="stylesheet" href="css/bootstrap.min.css" />
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="public/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="public/css/main.css">
     <link rel="shortcut icon" type="image/png" href="assets/images/omp_logo_shortcrop_white.png"/>
    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
