finished setting up file structure, refactored css into scss

--- a/index.html
+++ b/index.html
@@ -3,10 +3,6 @@
 <head>
   <title>Owl Mountain Products</title>
   <meta charset="utf-8">
-    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=open+sans">
-    <link href="https://fonts.googleapis.com/css?family=Playfair+Display|Playfair+Display+SC" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=cabin" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=muli" rel="stylesheet">
     <link rel="stylesheet" href="public/css/bootstrap.min.css" />
     <link rel="stylesheet" href="public/css/main.css">
     <link rel="shortcut icon" type="image/png" href="assets/images/omp_logo_shortcrop_white.png"/>
@@ -14,33 +10,33 @@
 </head>
 
 <body>
-<section class="hero">
-  <div class="hero_img"></div>
-  <div class="slogan_background">
-    <img class="mast_head" src="assets/images/omp_logo_shortcrop_white.png" />
-    <h1>Owl Mountain Products</h1>
-    <div class="card">
-      <img src="assets/images/everest_offerings-1.png" class="icon" alt="Tech Stack Icon">
-      <h3 class="sevice_description_title">Product Development</h3>
-      <p class="sevice_description">There are different tech 'languages' and frameworks for a reason, and each has their own strengths and weaknesses. If needed, we'll advise to make sure you're using the best stack for your goals.</p>      
-    </div>
-    <div class="card">
-      <img src="assets/images/everest_offerings-1.png" class="icon" alt="Tech Stack Icon">
-      <h3 class="sevice_description_title">Content</h3>
-      <p class="sevice_description">There are different tech 'languages' and frameworks for a reason, and each has their own strengths and weaknesses. If needed, we'll advise to make sure you're using the best stack for your goals.</p>      
-    </div> 
-    <div class="card">
-      <img src="assets/images/everest_offerings-1.png" class="icon" alt="Tech Stack Icon">
-      <h3 class="sevice_description_title">Design</h3>
-      <p class="sevice_description">There are different tech 'languages' and frameworks for a reason, and each has their own strengths and weaknesses. If needed, we'll advise to make sure you're using the best stack for your goals.</p>      
-    </div>
-    <div class="card">
-      <img src="assets/images/everest_offerings-1.png" class="icon" alt="Tech Stack Icon">
-      <h3 class="sevice_description_title">Data Science</h3>
-      <p class="sevice_description">There are different tech 'languages' and frameworks for a reason, and each has their own strengths and weaknesses. If needed, we'll advise to make sure you're using the best stack for your goals.</p>      
-    </div>   
-    <p class="contact">Hello@owlmountainproducts.com</p>
+  <img class="masthead_logo" src="assets/images/omp_logo_shortcrop_white.png" />
+  <h1>Owl Mountain Products</h1>
+
+  <div class="card">
+    <img class="icon" src="assets/images/everest_offerings-1.png" alt="owl mountain products services">
+    <h3 class="sevice_description_title">Product Development</h3>
+    <p class="sevice_description">There are different tech 'languages' and frameworks for a reason, and each has their own strengths and weaknesses. If needed, we'll advise to make sure you're using the best stack for your goals.</p>      
   </div>
-</section>
+
+  <div class="card">
+    <img class="icon" src="assets/images/everest_offerings-1.png" alt="owl mountain products services">
+    <h3 class="sevice_description_title">Content</h3>
+    <p class="sevice_description">There are different tech 'languages' and frameworks for a reason, and each has their own strengths and weaknesses. If needed, we'll advise to make sure you're using the best stack for your goals.</p>      
+  </div> 
+
+  <div class="card">
+    <img class="icon" src="assets/images/everest_offerings-1.png" alt="owl mountain products services">
+    <h3 class="sevice_description_title">Design</h3>
+    <p class="sevice_description">There are different tech 'languages' and frameworks for a reason, and each has their own strengths and weaknesses. If needed, we'll advise to make sure you're using the best stack for your goals.</p>      
+  </div>
+
+  <div class="card">
+    <img class="icon" src="assets/images/everest_offerings-1.png" alt="owl mountain products services">
+    <h3 class="sevice_description_title">Data Science</h3>
+    <p class="sevice_description">There are different tech 'languages' and frameworks for a reason, and each has their own strengths and weaknesses. If needed, we'll advise to make sure you're using the best stack for your goals.</p>      
+  </div>  
+
+  <p class="contact">Hello@owlmountainproducts.com</p>
 </body>
 </html>
