design is at a baseline

--- a/index.html
+++ b/index.html
@@ -12,31 +12,27 @@
 <body>
   <img class="masthead_logo" src="assets/images/omp_logo_shortcrop_white.png" />
   <h1>Owl Mountain Products</h1>
+  <section class="offerings">
+    <div class="card">
+      <h3 class="sevice_description_title">Product<br/> Development</h3>
+      <p class="sevice_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>      
+    </div>
 
-  <div class="card">
-    <img class="icon" src="assets/images/everest_offerings-1.png" alt="owl mountain products services">
-    <h3 class="sevice_description_title">Product Development</h3>
-    <p class="sevice_description">There are different tech 'languages' and frameworks for a reason, and each has their own strengths and weaknesses. If needed, we'll advise to make sure you're using the best stack for your goals.</p>      
-  </div>
+    <div class="card">
+      <h3 class="sevice_description_title">Content</h3>
+      <p class="sevice_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>      
+    </div> 
 
-  <div class="card">
-    <img class="icon" src="assets/images/everest_offerings-1.png" alt="owl mountain products services">
-    <h3 class="sevice_description_title">Content</h3>
-    <p class="sevice_description">There are different tech 'languages' and frameworks for a reason, and each has their own strengths and weaknesses. If needed, we'll advise to make sure you're using the best stack for your goals.</p>      
-  </div> 
+    <div class="card">
+      <h3 class="sevice_description_title">Design</h3>
+      <p class="sevice_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>      
+    </div>
 
-  <div class="card">
-    <img class="icon" src="assets/images/everest_offerings-1.png" alt="owl mountain products services">
-    <h3 class="sevice_description_title">Design</h3>
-    <p class="sevice_description">There are different tech 'languages' and frameworks for a reason, and each has their own strengths and weaknesses. If needed, we'll advise to make sure you're using the best stack for your goals.</p>      
-  </div>
-
-  <div class="card">
-    <img class="icon" src="assets/images/everest_offerings-1.png" alt="owl mountain products services">
-    <h3 class="sevice_description_title">Data Science</h3>
-    <p class="sevice_description">There are different tech 'languages' and frameworks for a reason, and each has their own strengths and weaknesses. If needed, we'll advise to make sure you're using the best stack for your goals.</p>      
-  </div>  
-
-  <p class="contact">Hello@owlmountainproducts.com</p>
+    <div class="card">
+      <h3 class="sevice_description_title">Data Science</h3>
+      <p class="sevice_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>      
+    </div>  
+    <p class="contact">Hello@owlmountainproducts.com</p>
+  </section>
 </body>
 </html>
