--- a/index.html
+++ b/index.html
@@ -14,23 +14,27 @@
   <h1>Owl Mountain Products</h1>
   <section class="offerings">
     <div class="card">
-      <h3 class="sevice_description_title">Product<br/> Development</h3>
-      <p class="sevice_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>      
+<!--       <img src="assets/images/everest_offerings-1.png" class="icon" /> -->
+      <h2 class="sevice_description_title">Product<br/> Development</h2>
+      <p class="sevice_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
     </div>
 
     <div class="card">
-      <h3 class="sevice_description_title">Content</h3>
-      <p class="sevice_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>      
+<!--       <img src="assets/images/everest_offerings-1.png" class="icon" /> -->
+      <h2 class="sevice_description_title">Content</h2>
+      <p class="sevice_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
     </div> 
 
     <div class="card">
-      <h3 class="sevice_description_title">Design</h3>
-      <p class="sevice_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>      
+<!--       <img src="assets/images/everest_offerings-1.png" class="icon" /> -->
+      <h2 class="sevice_description_title">Design</h2>
+      <p class="sevice_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
     </div>
 
     <div class="card">
-      <h3 class="sevice_description_title">Data Science</h3>
-      <p class="sevice_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>      
+<!--       <img src="assets/images/everest_offerings-1.png" class="icon" /> -->
+      <h2 class="sevice_description_title">Data Science</h2>
+      <p class="sevice_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
     </div>  
     <p class="contact">Hello@owlmountainproducts.com</p>
   </section>
